<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">LINK APP</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="done">Done</string>
    <string name="back">Back</string>
    <string name="delete">Delete</string>
    <string name="upload">Upload</string>
    <string name="deleting">Deleting</string>
    <string name="yes">Yes</string>
    <string name="sending">Sending</string>
    <string name="apply">Apply</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="continue_anyway">Continue</string>
    <string name="qs_title">Quick Setup</string>
    <string name="qs_exit_query">Exit Quick Setup</string>
    <string name="qs_item_pin_code">PIN Code</string>
    <string name="qs_pin_code_prompt">Please input the PIN code\nRemain: <xliff:g id="INPUTTIMES">%1$d</xliff:g> time(s)</string>
    <string name="qs_item_wifi_ssid">Wi-Fi Network Name (SSID)</string>
    <string name="qs_wifi_ssid_prompt">The SSID should be 1&#8211;32 characters.</string>
    <string name="qs_item_wifi_passwd">Wi-Fi Password</string>
    <string name="qs_wifi_passwd_prompt">The password should be 8&#8211;63 characters.</string>
    <string name="qs_wifi_wep_passwd_prompt">The password should be 5 or 13 ASCII characters, or 10 or 26 hexadecimal digits</string>
    <string name="qs_completed">Setup Completed</string>
    <string name="qs_summary">Your device is ready to use.</string>
    <string name="qs_wifi_ssid">Wi-Fi Network Name (SSID): <xliff:g id="SSID">%1$s</xliff:g></string>
    <string name="qs_wifi_passwd">Wi-Fi Password: <xliff:g id="PASSWD">%1$s</xliff:g></string>
    <string name="qs_puk_code_title">PUK Code </string>
    <string name="qs_puk_code_prompt">Please input the PUK code\nRemain: <xliff:g id="INPUTTIMES">%1$d</xliff:g> time(s)</string>
    <string name="qs_puk_code">PUK Code: </string>
    <string name="qs_pin_code_new">New PIN: </string>
    <string name="qs_pin_code_confirm">Confirm PIN: </string>
    <string name="main_home">Home</string>
    <string name="main_sdsharing">SD Sharing</string>
    <string name="main_usage">Usage</string>
    <string name="main_setting">Settings</string>
    <string name="main_sms">SMS</string>
    <string name="home_GB">GB</string>
    <string name="home_KB">KB</string>
    <string name="home_MB">MB</string>
    <string name="home_B">B</string>
    <string name="Home_unlock_pin">Unlock</string>
    <string name="Home_no_sim">No SIM Card</string>
    <string name="Home_sim_invalid">Invalid SIM</string>
    <string name="Home_pin_locked">PIN Locked</string>
    <string name="Home_puk_locked">PUK Locked</string>
    <string name="Home_SimCard_IsIniting">Initializing</string>
    <string name="Home_PukTimes_UsedOut">Puk Times Used Out</string>
    <string name="Home_SimLock_Required">SIM Lock required</string>
    <string name="Home_SimCard_Detected">SIM Card detected</string>
    <string name="Home_unknown">unknown</string>
    <string name="Home_zero_time">0Hrs 0Mins</string>
    <string name="Home_zero_data">%1$sMB</string>
    <string name="home_no_service">No Service</string>
    <string name="home_initializing">Initializing</string>
    <string name="home_disconnected_to">Disconnected</string>
    <string name="home_connected_to">Connected</string>
    <string name="home_connecting_to">Connecting</string>
    <string name="home_disconnecting_to">Disconnecting</string>
    <string name="home_network_type_2g">2G</string>
    <string name="home_network_type_3g">3G</string>
    <string name="home_network_type_3g_plus">3G+</string>
    <string name="home_network_type_4g">4G</string>
    <string name="home_battery_ischarging">Charging</string>
    <string name="home_battery_completed">Charge completed</string>
    <string name="home_connected_duration">%1$sHrs %2$sMins</string>
    <string name="access_lable">connected</string>
    <string name="home_sim_loched">Sim Card Locked</string>
    <string name="home_no_sim">no sim card</string>
    <string name="home_sim_not_accessible">Sim card is not accessible</string>
    <string name="home_battery_unit">%</string>
    <string name="home_usage_over_redial_message">Monthly data plan has been used up. If you want to re-dial, please change the monthly values or reset consumption.</string>
    <string name="add_dialog_sdsharing">SD Sharing</string>
    <string name="add_dialog_wps">WPS</string>
    <string name="add_dialog_logout">Logout</string>
    <string name="pop_dialog_usagesetting">Usage Setting</string>
    <string name="pop_dialog_clearhistory">Clear History</string>
    <string name="usage_view_home">Home</string>
    <string name="usage_view_duration">Duration</string>
    <string name="bt_set_monthlydata">Set Monthly Data Plan</string>
    <string name="usage_status_des">No data plan set yet</string>
    <string name="usage_duration">%1$sHrs %2$sMins</string>
    <string name="disconnected_descrition">When data usage reaches Monthly Data Plan.</string>
    <string name="usage_clear_history_success">Clear usage history successfully!</string>
    <string name="usage_clear_history_fail">Clear usage history failed!</string>
    <string name="usage_comsumptionexplain_label">If enable clear function, please disconnect first.</string>
    <string name="usage_setting_title">Usage Settings</string>
    <string name="usage_setting_timelimit">Time Limit</string>
    <string name="usage_setting_settimelimit">Set Time Limit:</string>
    <string name="usage_setting_timeunit">min(s)</string>
    <string name="usage_setting_usage">Usage</string>
    <string name="usage_setting_billingday">Billing Day:</string>
    <string name="usage_setting_dayunit">day</string>
    <string name="usage_setting_monthlysataplan">Monthly Data Plan:</string>
    <string name="usage_setting_monthlyunit">MB</string>
    <string name="usage_setting_dataconsunption">Data Consumption:</string>
    <string name="usage_setting_roaming">Roaming</string>
    <string name="roaming_descrition">Automatically connect even when in roaming.</string>
    <string name="usage_setting_autodisconnected">Auto Disconnected</string>
    <string name="sms_title">Message</string>
    <string name="sms_empty">No SMS</string>
    <string name="sms_init">SMS Unavailable</string>
    <string name="sms_list_view_draft">%1$d,draft</string>
    <string name="sms_send_fail">Fail</string>
    <string name="sms_report_message">Message delivered!</string>
    <string name="sms_to">To:</string>
    <string name="sms_new_title">Message</string>
    <string name="sms_error_send_error">Send SMS error!</string>
    <string name="sms_send_success">Send SMS success.</string>
    <string name="sms_error_message_full_storage">SMS box is full, please delete some SMS to be able to send/save new SMS.</string>
    <string name="sms_delete_multi_success">Delete conversation success!</string>
    <string name="sms_delete_multi_error">Delete conversation failed!</string>
    <string name="sms_delete_error">Delete SMS error!</string>
    <string name="sms_delete_success">Delete SMS success!</string>
    <string name="sms_number_invalid">Error! Only 3 phone numbers are allowed.</string>
    <string name="sms_save_success">SMS is saved as a draft.</string>
    <string name="sms_save_error">Save SMS failed.</string>
    <string name="device_manage_title">Devices</string>
    <string name="device_manage_connected">Connected Devices (%1$d)</string>
    <string name="device_manage_block">Block Devices (%1$d)</string>
    <string name="device_manage_block_btn">Block</string>
    <string name="device_manage_unblock_btn">Unblock</string>
    <string name="device_manage_ip">IP:%1$s</string>
    <string name="device_manage_mac">MAC:%1$s</string>
    <string name="device_manage_name_empty">Device name is invalid.</string>
    <string name="device_manage_set_name_failed">Set failed!</string>
    <string name="microsd_file">File</string>
    <string name="microsd_videos">Videos</string>
    <string name="microsd_music">Music</string>
    <string name="microsd_pictures">Pictures</string>
    <string name="microsd_no_sdcard">No SD Card device</string>
    <string name="setting_wifi">WiFi</string>
    <string name="setting_account">Account</string>
    <string name="setting_network">Network</string>
    <string name="setting_power">Power Saving</string>
    <string name="setting_upgrade">Upgrade</string>
    <string name="setting_device">Device</string>
    <string name="setting_about">About</string>
    <string name="setting_backup">Backup&amp;Restore</string>
    <string name="setting_text_2point4G_wifi">2.4G WiFi</string>
    <string name="setting_text_5G_wifi">5G WiFi</string>
    <string name="setting_text_ssid">SSID:</string>
    <string name="setting_text_ssid_broadcast">SSID Broadcast</string>
    <string name="setting_text_passwrod">Password:</string>
    <string name="setting_set_default">Default</string>
    <string name="setting_text_no_passwrod">No Password</string>
    <string name="setting_wifi_set_success">Change Wifi Settings successfully!</string>
    <string name="setting_wifi_set_failed">Change Wifi Settings failed!</string>
    <string name="setting_wifi_password_security_tip">Security Type:</string>
    <string name="setting_backup_description">Backup the configuration.</string>
    <string name="setting_backup_btn_backup">Backup</string>
    <string name="setting_restore_description">Restore the configuration.</string>
    <string name="setting_restore_btn_restore">Restore</string>
    <string name="setting_about_version">Version</string>
    <string name="setting_about_feedback_comment_hint">Thank you for your comments &#8230;</string>
    <string name="setting_about_feedback_contact_title">Your Contact (Optional)</string>
    <string name="setting_about_feedback_contact">Your Phone Number, Email</string>
    <string name="setting_about_feedback_contact_add_photo">+</string>
    <string name="setting_about_official_website">Official website</string>
    <string name="setting_about_management_page">Management page</string>
    <string name="setting_about_copyright">Copyright © 2014–2016 TCL Communication Ltd. All right reserved.</string>
    <string name="setting_upgrade_device_version">Device: Current Version </string>
    <string name="setting_upgrade_btn_check">Check</string>
    <string name="setting_upgrade_current_app_version">Mobile phone apps: Current Version v</string>
    <string name="setting_upgrade_new_app_version">Find a new version v</string>
    <string name="setting_upgrade_btn_upgrade">Upgrade</string>
    <string name="setting_about_app_name">ALCATELONETOUCH</string>
    <string name="setting_change_login_password">Change Login Password</string>
    <string name="setting_log_out">Log Out</string>
    <string name="setting_current_password">Current Password:</string>
    <string name="setting_new_password">New Password:</string>
    <string name="setting_confirm_password">Confirm Password:</string>
    <string name="pin_error_waring_title">Sorry, the PIN code is wrong!</string>
    <string name="image_view_close_button">close button</string>
    <string name="error_info">Error</string>
    <string name="btn_reply">Retry</string>
    <string name="operation_download">Download</string>
    <string name="operation_delete">Delete</string>
    <string name="operation_info">Details</string>
    <string name="operation_move">Move</string>
    <string name="operation_move_to">Move to</string>
    <string name="operation_rename">Rename</string>
    <string name="operation_share">Share</string>
    <string name="details_text_size">Size:</string>
    <string name="details_text_create_date">Create Date:</string>
    <string name="details_text_modified_date">Modified Date:</string>
</resources>