<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item android:id="@+id/action_delete"
        android:icon="@drawable/operation_button_delete"
        android:title="@string/operation_delete"
        android:showAsAction="never" />
    
    <item android:id="@+id/action_move"
        android:icon="@drawable/operation_button_move"
        android:title="@string/operation_move"
        android:showAsAction="never" />
    
    <item android:id="@+id/action_move_to"
        android:icon="@drawable/operation_button_move"
        android:title="@string/operation_move_to"
        android:showAsAction="never" />
    
    <item android:id="@+id/action_download"
        android:icon="@drawable/operation_button_download"
        android:title="@string/operation_download"
        android:showAsAction="never" />
    
    <item android:id="@+id/action_send"
        android:icon="@drawable/operation_button_send"
        android:title="@string/operation_share"
        android:showAsAction="never" />    
           
    <item android:id="@+id/action_rename"
        android:title="@string/operation_rename"
        android:showAsAction="never" />
    
    <item android:id="@+id/action_details"
        android:title="@string/operation_info"
        android:showAsAction="never" />
    
	
</menu>
