<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <RelativeLayout android:id="@+id/rl_check_firmware"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        
        <TextView android:id="@+id/tv_check_firmware"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="17sp"
            android:text="@string/setting_upgrade_device_version"/>

        <Button android:id="@+id/btn_check_firmware"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:gravity="center"
            android:text="@string/setting_upgrade_btn_check"
            android:layout_below="@id/tv_check_firmware"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"/>
        <ImageView android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:background="@android:color/black"
            android:contentDescription="@string/setting_upgrade" />
    </RelativeLayout>
    
    <RelativeLayout android:id="@+id/rl_upgrade_app"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        
        <TextView android:id="@+id/tv_current_app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="17sp"
            android:text="@string/setting_upgrade_current_app_version"/>
        
        <TextView android:id="@+id/tv_new_app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_current_app_version"
            android:layout_centerHorizontal="true"
            android:textSize="17sp"
            android:text="@string/setting_upgrade_new_app_version"/>

        <Button android:id="@+id/btn_firmware_check"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:gravity="center"
            android:text="@string/setting_upgrade_btn_upgrade"
            android:layout_below="@id/tv_new_app_version"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

</LinearLayout>