<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/light_gray"
    android:orientation="vertical"
    android:paddingBottom="30dp"
    android:paddingTop="30dp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:text="@string/operation_info"
        android:textColor="#000000" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="80dp"
            android:text="@string/details_text_size" />

        <TextView
            android:id="@+id/information_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="130dp" />

        <TextView
            android:id="@+id/text_create_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/text_size"
            android:layout_below="@+id/text_size"
            android:text="@string/details_text_create_date" />

        <TextView
            android:id="@+id/information_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/information_size"
            android:layout_below="@+id/information_size" />

        <TextView
            android:id="@+id/text_modified_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/text_create_date"
            android:layout_below="@+id/text_create_date"
            android:text="@string/details_text_modified_date" />

        <TextView
            android:id="@+id/information_modified"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/information_create"
            android:layout_below="@+id/information_create" />
    </RelativeLayout>

</LinearLayout>