<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rl_backup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <!-- center position -->
        <ImageView android:id="@+id/iv_center_position_up"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/setting_backup"/>
        <TextView
            android:id="@+id/tv_backup_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_above="@id/iv_center_position_up"
            android:layout_marginBottom="20dp"
            android:text="@string/setting_backup_description"
            android:textColor="@color/color_black"
            android:textSize="17sp" />

        <Button
            android:id="@+id/btn_backup"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_center_position_up"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/setting_backup_btn_backup"
            android:textSize="17sp"
            android:textColor="@drawable/common_button_text"
            android:background="@drawable/selector_common_button" />
    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:background="@color/main_bottom_divider"
        android:contentDescription="@string/setting_backup_description" />

    <RelativeLayout
        android:id="@+id/rl_restore"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <!-- center position -->
        <ImageView android:id="@+id/iv_center_position_down"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/setting_backup"/>
        <TextView
            android:id="@+id/tv_restore_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_above="@id/iv_center_position_down"
            android:layout_marginBottom="20dp"
            android:text="@string/setting_restore_description"
            android:textColor="@color/color_black"
            android:textSize="17sp" />

        <Button
            android:id="@+id/btn_restore"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_center_position_down"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/setting_restore_btn_restore"
            android:textSize="17sp"
            android:textColor="@drawable/common_button_text"
            android:background="@drawable/selector_common_button" />
    </RelativeLayout>

</LinearLayout>